cmake_minimum_required(VERSION 3.17)
project(learn_cpp)

set(CMAKE_CXX_STANDARD 14)
add_executable(limits chapter_3/program_lists/limits.cpp)
add_executable(exceed chapter_3/program_lists/exceed.cpp)
add_executable(exerc_3_3 chapter_3/program_exercises/exerc_3_3.cpp)
add_executable(exerc_3_4 chapter_3/program_exercises/exerc_3_4.cpp)
add_executable(exerc_3_5 chapter_3/program_exercises/exerc_3_5.cpp)
add_executable(exerc_3_6 chapter_3/program_exercises/exerc_3_6.cpp)
add_executable(arrayone chapter_4/program_lists/arrayone.cpp)
add_executable(string chapter_4/program_lists/string.cpp)
add_executable(instr1 chapter_4/program_lists/instr1.cpp)
add_executable(instr2 chapter_4/program_lists/instr2.cpp)
add_executable(instr3 chapter_4/program_lists/instr3.cpp)
add_executable(numstr chapter_4/program_lists/numstr.cpp)
add_executable(strtype2 chapter_4/program_lists/strtype2.cpp)
add_executable(strtype3 chapter_4/program_lists/strtype3.cpp)
add_executable(strtype4 chapter_4/program_lists/strtype4.cpp)
add_executable(calling chapter_7/program_lists/calling.cpp)
add_executable(protos chapter_7/program_lists/protos.cpp)
add_executable(twoarg chapter_7/program_lists/twoarg.cpp)
add_executable(lotto chapter_7/program_lists/lotto.cpp)