cmake_minimum_required(VERSION 3.17)
project(learn_cpp)

set(CMAKE_CXX_STANDARD 14)
add_executable(limits chapter_3/program_lists/limits.cpp)
add_executable(exceed chapter_3/program_lists/exceed.cpp)
add_executable(exerc_3_3 chapter_3/program_exercises/exerc_3_3.cpp)
add_executable(exerc_3_4 chapter_3/program_exercises/exerc_3_4.cpp)
add_executable(exerc_3_5 chapter_3/program_exercises/exerc_3_5.cpp)
add_executable(exerc_3_6 chapter_3/program_exercises/exerc_3_6.cpp)
add_executable(arrayone chapter_4/program_lists/arrayone.cpp)
add_executable(string chapter_4/program_lists/string.cpp)
add_executable(instr1 chapter_4/program_lists/instr1.cpp)
add_executable(instr2 chapter_4/program_lists/instr2.cpp)
add_executable(instr3 chapter_4/program_lists/instr3.cpp)
add_executable(numstr chapter_4/program_lists/numstr.cpp)
add_executable(strtype2 chapter_4/program_lists/strtype2.cpp)
add_executable(strtype3 chapter_4/program_lists/strtype3.cpp)
add_executable(strtype4 chapter_4/program_lists/strtype4.cpp)
add_executable(calling chapter_7/program_lists/calling.cpp)
add_executable(protos chapter_7/program_lists/protos.cpp)
add_executable(twoarg chapter_7/program_lists/twoarg.cpp)
add_executable(lotto chapter_7/program_lists/lotto.cpp)
add_executable(arrfun1 chapter_7/program_lists/arrfun1.cpp)
add_executable(arrfun2 chapter_7/program_lists/arrfun2.cpp)
add_executable(arrfun3 chapter_7/program_lists/arrfun3.cpp)
add_executable(arrfun4 chapter_7/program_lists/arrfun4.cpp)
add_executable(strgfun chapter_7/program_lists/strgfun.cpp)
add_executable(strgback chapter_7/program_lists/strgback.cpp)
add_executable(travel chapter_7/program_lists/travel.cpp)
add_executable(atrctfun chapter_7/program_lists/atrctfun.cpp)
add_executable(strctptr chapter_7/program_lists/strctptr.cpp)
add_executable(topfive chapter_7/program_lists/topfive.cpp)
add_executable(arrobj chapter_7/program_lists/arrobj.cpp)
add_executable(recur chapter_7/program_lists/recur.cpp)
add_executable(ruler chapter_7/program_lists/ruler.cpp)
add_executable(exerc_7_1 chapter_7/program_exercises/exerc_7_1.cpp)
add_executable(inline chapter_8/program_lists/inline.cpp)
add_executable(firstref chapter_8/program_lists/firstref.cpp)
add_executable(sceref chapter_8/program_lists/sceref.cpp)
add_executable(swaps chapter_8/program_lists/swaps.cpp)
add_executable(cubes chapter_8/program_lists/cubes.cpp)
add_executable(filefunc chapter_8/program_lists/filefunc.cpp)
add_executable(strquote chapter_8/program_lists/strquote.cpp)
add_executable(strtref chapter_8/program_lists/strtref.cpp)
add_executable(left chapter_8/program_lists/left.cpp)
add_executable(leftover chapter_8/program_lists/leftover.cpp)
add_executable(funtemp chapter_8/program_lists/funtemp.cpp)
add_executable(twotemps chapter_8/program_lists/twotemps.cpp)
add_executable(exerc_8_3 chapter_8/program_exercises/exerc_8_3.cpp)
add_executable(forloop chapter_5/program_lists/forloop.cpp)
add_executable(num_test chapter_5/program_lists/num_test.cpp)
add_executable(usestock0 chapter_10/program_lists/10.1-10.3/stock00.cpp chapter_10/program_lists/10.1-10.3/usestock0.cpp)
add_executable(usestock1 chapter_10/program_lists/10.4-10.6/stock10.cpp chapter_10/program_lists/10.4-10.6/usestock2.cpp)
add_executable(usestock2 chapter_10/program_lists/10.7-10.9/stock20.cpp chapter_10/program_lists/10.7-10.9/usestock2.cpp)
add_executable(stacker chapter_10/program_lists/10.10-10.12/stack.cpp chapter_10/program_lists/10.10-10.12/stacker.cpp)
add_executable(accttest chapter_10/program_exercises/exerc_10_1/account.cpp chapter_10/program_exercises/exerc_10_1/accttest.cpp)
add_executable(usetime0 chapter_11/program_lists/11.1-11.3/mytime0.cpp chapter_11/program_lists/11.1-11.3/usetime0.cpp)
add_executable(usetime1 chapter_11/program_lists/11.4-11.6/mytime1.cpp chapter_11/program_lists/11.4-11.6/usetime1.cpp)
add_executable(usetime2 chapter_11/program_lists/11.7-11.9/mytime2.cpp chapter_11/program_lists/11.7-11.9/usetime2.cpp)