cmake_minimum_required(VERSION 3.17)
project(learn_cpp)

set(CMAKE_CXX_STANDARD 14)
add_executable(limits chapter_3/program_lists/limits.cpp)
add_executable(exceed chapter_3/program_lists/exceed.cpp)
add_executable(exerc_3_3 chapter_3/program_exercises/exerc_3_3.cpp)
add_executable(exerc_3_4 chapter_3/program_exercises/exerc_3_4.cpp)
add_executable(exerc_3_5 chapter_3/program_exercises/exerc_3_5.cpp)
add_executable(exerc_3_6 chapter_3/program_exercises/exerc_3_6.cpp)
add_executable(arrayone chapter_4/program_lists/arrayone.cpp)
add_executable(string chapter_4/program_lists/string.cpp)
add_executable(instr1 chapter_4/program_lists/instr1.cpp)
add_executable(instr2 chapter_4/program_lists/instr2.cpp)
add_executable(instr3 chapter_4/program_lists/instr3.cpp)
add_executable(numstr chapter_4/program_lists/numstr.cpp)
add_executable(strtype2 chapter_4/program_lists/strtype2.cpp)
add_executable(strtype3 chapter_4/program_lists/strtype3.cpp)
add_executable(strtype4 chapter_4/program_lists/strtype4.cpp)
add_executable(calling chapter_7/program_lists/calling.cpp)
add_executable(protos chapter_7/program_lists/protos.cpp)
add_executable(twoarg chapter_7/program_lists/twoarg.cpp)
add_executable(lotto chapter_7/program_lists/lotto.cpp)
add_executable(arrfun1 chapter_7/program_lists/arrfun1.cpp)
add_executable(arrfun2 chapter_7/program_lists/arrfun2.cpp)
add_executable(arrfun3 chapter_7/program_lists/arrfun3.cpp)
add_executable(arrfun4 chapter_7/program_lists/arrfun4.cpp)
add_executable(strgfun chapter_7/program_lists/strgfun.cpp)
add_executable(strgback chapter_7/program_lists/strgback.cpp)
add_executable(travel chapter_7/program_lists/travel.cpp)
add_executable(atrctfun chapter_7/program_lists/atrctfun.cpp)
add_executable(strctptr chapter_7/program_lists/strctptr.cpp)
add_executable(topfive chapter_7/program_lists/topfive.cpp)
add_executable(arrobj chapter_7/program_lists/arrobj.cpp)
add_executable(recur chapter_7/program_lists/recur.cpp)
add_executable(ruler chapter_7/program_lists/ruler.cpp)
add_executable(exerc_7_1 chapter_7/program_exercises/exerc_7_1.cpp)
add_executable(inline chapter_8/program_lists/inline.cpp)
add_executable(firstref chapter_8/program_lists/firstref.cpp)
add_executable(sceref chapter_8/program_lists/sceref.cpp)
add_executable(swaps chapter_8/program_lists/swaps.cpp)
add_executable(cubes chapter_8/program_lists/cubes.cpp)
add_executable(filefunc chapter_8/program_lists/filefunc.cpp)
add_executable(strquote chapter_8/program_lists/strquote.cpp)
add_executable(strtref chapter_8/program_lists/strtref.cpp)
add_executable(left chapter_8/program_lists/left.cpp)
add_executable(leftover chapter_8/program_lists/leftover.cpp)
add_executable(funtemp chapter_8/program_lists/funtemp.cpp)
add_executable(twotemps chapter_8/program_lists/twotemps.cpp)
add_executable(exerc_8_3 chapter_8/program_exercises/exerc_8_3.cpp)
add_executable(forloop chapter_5/program_lists/forloop.cpp)
add_executable(num_test chapter_5/program_lists/num_test.cpp)
add_executable(usestock0 chapter_10/program_lists/10.1-10.3/stock00.cpp chapter_10/program_lists/10.1-10.3/usestock0.cpp)
add_executable(usestock1 chapter_10/program_lists/10.4-10.6/stock10.cpp chapter_10/program_lists/10.4-10.6/usestock2.cpp)
add_executable(usestock2 chapter_10/program_lists/10.7-10.9/stock20.cpp chapter_10/program_lists/10.7-10.9/usestock2.cpp)
add_executable(stacker chapter_10/program_lists/10.10-10.12/stack.cpp chapter_10/program_lists/10.10-10.12/stacker.cpp)
add_executable(accttest chapter_10/program_exercises/exerc_10_1/account.cpp chapter_10/program_exercises/exerc_10_1/accttest.cpp)
add_executable(usetime0 chapter_11/program_lists/11.1-11.3/mytime0.cpp chapter_11/program_lists/11.1-11.3/usetime0.cpp)
add_executable(usetime1 chapter_11/program_lists/11.4-11.6/mytime1.cpp chapter_11/program_lists/11.4-11.6/usetime1.cpp)
add_executable(usetime2 chapter_11/program_lists/11.7-11.9/mytime2.cpp chapter_11/program_lists/11.7-11.9/usetime2.cpp)
add_executable(usetime3 chapter_11/program_lists/11.10-11.12/mytime3.cpp chapter_11/program_lists/11.10-11.12/usetime3.cpp)
add_executable(stone chapter_11/program_lists/11.16-11.18/stonewt.cpp chapter_11/program_lists/11.16-11.18/stone.cpp)
add_executable(stone1 chapter_11/program_lists/11.19-11.21/stonewt1.cpp chapter_11/program_lists/11.19-11.21/stone1.cpp)
add_executable(vegnews chapter_12/program_lists/12.1-12.3/stringbad.cpp chapter_12/program_lists/12.1-12.3/vegnews.cpp)
add_executable(write chapter_17/program_lists/write.cpp)
add_executable(defaults chapter_17/program_lists/defaults.cpp)
add_executable(manip chapter_17/program_lists/manip.cpp)
add_executable(width chapter_17/program_lists/width.cpp)
add_executable(fill chapter_17/program_lists/fill.cpp)
add_executable(precise chapter_17/program_lists/precise.cpp)
add_executable(showpt chapter_17/program_lists/showpt.cpp)
add_executable(setf chapter_17/program_lists/setf.cpp)
add_executable(setf2 chapter_17/program_lists/setf2.cpp)
add_executable(iomanip chapter_17/program_lists/iomanip.cpp)
add_executable(check_it chapter_17/program_lists/check_it.cpp)
add_executable(cinexcp chapter_17/program_lists/cinexcp.cpp)
add_executable(get_gun chapter_17/program_lists/get_gun.cpp)
add_executable(peeker chapter_17/program_lists/peeker.cpp)
add_executable(text chapter_17/program_lists/text.cpp)
add_executable(fileio chapter_17/program_lists/fileio.cpp)
add_executable(count chapter_17/program_lists/count.cpp)
add_executable(append chapter_17/program_lists/append.cpp)
add_executable(binary chapter_17/program_lists/binary.cpp)
add_executable(str1 chapter_16/program_lists/str1.cpp)
add_executable(strfile chapter_16/program_lists/strfile.cpp)